Arbeiten des Sonntagabends

--- a/Dokumentation/LaTeX Doku/content/Auswertung.tex
+++ b/Dokumentation/LaTeX Doku/content/Auswertung.tex
@@ -8,7 +8,7 @@ Der Aufgabenstellung konnten wir die fünf Themengebiete Stand der Technik, Anfo
 
 \newpage
 \section{Stand der Technik}
-Im Nachfolgenden wird erläutert, welche Technologien wir für die Erstellung der CharBuilder App verwendeten und warum diese von uns gewählt wurden. Hierbei haben wir den Text in die Unterkategorien Android(Betriebssystem), Kotlin(Programmiersprache), Gson(Json Java-Lib), Gradle(Build Tool), Android Studio(IDEA) und UMLet(UML Tool) aufgeteilt. Das sind die wichtigsten Technologien, die wir zum Entwickeln unserer App genutzt haben.
+Im Nachfolgenden wird erläutert, welche Technologien wir für die Erstellung der CharBuilder App verwendeten und warum diese von uns gewählt wurden. Hierbei haben wir den Text in die Unterkategorien Android(Betriebssystem), Kotlin(Programmiersprache), Gson(Json Java-Lib), Gradle(Build Tool), Android Studio(IDEA), UMLet(UML Tool), Git und Google Firebase aufgeteilt. Das sind die wichtigsten Technologien, die wir zum Entwickeln unserer App genutzt haben.
 
 \subsection{Android}
 Wie in der Einleitung geschrieben, haben wir uns für Android als Betriebssystem entschieden. Da verschiedene Version dessen auf unterschiedlichen Geräten verteilt sind
@@ -52,6 +52,9 @@ Git ist eine Software zur Versionsverwaltung. Es findet bereits große Anwendung
 UMLet ist ein kostenloses Open-Source UML Tool mit einer simplen Benutzeroberfläche. Die erstellten Diagramme lassen sich z.B. als pdf, jpg oder png exportieren. Wenn einem die große Auswahl an UML Elementen nicht reicht, kann man eigene erstellen oder importieren. Zum Zeichnen unserer Diagramme haben wir die Version 14.2 genutzt. %\cite{http://www.umlet.com/}
 
 \subsection{Google Firebase}
+\label{sdt:firebase}
+
+Firebase ist eine Entwicklungsplattform für Mobile- und auch Webapplikationen. Ursprünglich als Startup 2011 gegründet wurde es 2014 von Google aufgekauft. Der Dienst bietet mehrere Funktionen, in unserer App verwenden wir allerdings nur \textit{Firebase Storage} verwendet um dem Nutzer das speichern seines Charakters zu ermöglichen. Hier bietet der Service eine Stufe welche es uns ermöglicht die Anwendung im kleinen Rahmen zu verwenden ohne das zusätzliche Kosten entstehen.
 
 \newpage
 \section{Anforderungen}
@@ -85,8 +88,9 @@ Die App wird keine Gruppenverwaltung ermöglichen. Das bedeutet, dass ein Spiell
 
 \newpage
 \section{Architektur}
+\subsection{Klassendiagramm}
 \subsection{Model View Controller(MVC)}
-CharCreationController als Controller, Player als Model, Fragmente als View
+Normal erklären was mvc ist(easy)
 
 \newpage
 \section{Implementierung}
@@ -127,9 +131,11 @@ Das SpeciesFragment bietet dem Nutzer eine Liste an, aus welcher ein Element aus
 
 \subsubsection{CareerFragment.kt}
 
-Das CareerFragment biete eine ähnliche Funktionalität wie das oben genannten SpeciesFragment, es ist jedoch aufgrund der gesteigerten Komplexität nicht so unkompliziert zu implementieren. Wegen der größeren Menge an Daten und Abhängigkeiten, welche dargestellt werden müssen, haben wir uns entschieden als Hauptelement der Benutzeroberfläche eine \textit{ExpandableListView} zu verwenden. Sie besteht aus \textit{GROUP\_ITEM}'s welche jeweils beliebig viele \textit{CHILD\_ITEM} haben können. Diese \textit{CHILD\_ITEM}'s werden bei der Auswahl des Gruppenelements \grqq ausgeklappt\grqq{}. Auf diese weise ist es möglich die Abhängigkeiten für den Nutzer gut sichtbar zu modellieren. Sollte der Anwender dann eines der Subelemente auswählen, öffnet sich der entsprechende \textit{Skill Tree} und die Applikation merkt sich welcher Beruf ausgewählt wurde. Da die Daten dieses Fragmentes an die Auswahl der Spezies gebunden ist, wird der Nutzer bei Änderungen oder Inkonsistenzen mittels eines Dialoges benachrichtigt. Durch die vielen Elemente mussten bereits nur für die Liste drei Layout-Dateien angelegt werden. In der \textit{char\_creation\_career.xml} wird lediglich die \textit{ExpandableListView} angelegt, die anderen beiden Dateien sind jeweils für das Gruppen- und Kindelement: \textit{char\_creation\_career\_group\_item.xml} und \textit{char\_creation\_career\_child\_item.xml}. Im eigentlichen Quellcode ähnelt dieses Fragment sehr dem oben genannten, ein möglicher Beruf wird durch die Klasse Career repräsentiert. Sie bietet unter anderem die Variablen für Namen und die entsprechenden Unterklassen welche die Kindelemente darstellen. Die Daten werden wieder mit dem  \textit{XMLPullParser} eingelesen, womit dann die Objekte erstellt werden. Die Daten zu den \textit{Skill Tree}'s werden ebenfalls aus einer XML-Datei geladen. Sollte der Nutzer seine bisherige Auswahl ändern wollen so kann er dies mit einem einfachen Button tun.
+Das CareerFragment biete eine ähnliche Funktionalität wie das oben genannten SpeciesFragment, es ist jedoch aufgrund der gesteigerten Komplexität nicht so unkompliziert zu implementieren. Wegen der größeren Menge an Daten und Abhängigkeiten, welche dargestellt werden müssen, haben wir uns entschieden als Hauptelement der Benutzeroberfläche eine \textit{ExpandableListView} zu verwenden. Sie besteht aus \textit{GROUP\_ITEM}'s welche jeweils beliebig viele \textit{CHILD\_ITEM} haben können. Diese \textit{CHILD\_ITEM}'s werden bei der Auswahl des Gruppenelements \grqq ausgeklappt\grqq{}. Auf diese weise ist es möglich die Abhängigkeiten für den Nutzer gut sichtbar zu modellieren. Sollte der Anwender dann eines der Subelemente auswählen, öffnet sich der entsprechende \textit{Skill Tree} und die Applikation merkt sich welcher Beruf ausgewählt wurde. Da die Daten dieses Fragmentes an die Auswahl der Spezies gebunden ist, wird der Nutzer bei Änderungen oder Inkonsistenzen mittels eines Dialoges benachrichtigt. Durch die vielen Elemente mussten bereits nur für die Liste drei Layout-Dateien angelegt werden. In der \textit{char\_creation\_career.xml} wird lediglich die \textit{ExpandableListView} angelegt, die anderen beiden Dateien sind jeweils für das Gruppen- und Kindelement: \textit{char\_creation\_career\_group\_item.xml} und \textit{char\_creation\_career\_child\_item.xml}. Im eigentlichen Quellcode ähnelt dieses Fragment sehr dem oben genannten, ein möglicher Beruf wird um Beispiel durch die Klasse Career repräsentiert. Sie bietet unter anderem die Variablen für Namen und die entsprechenden Unterklassen welche die Kindelemente darstellen. Die Daten werden wieder mit dem  \textit{XMLPullParser} eingelesen, womit dann die Objekte erstellt werden. Die Daten zu den \textit{Skill Tree}'s werden ebenfalls aus einer XML-Datei geladen. Sollte der Nutzer seine bisherige Auswahl ändern wollen so kann er dies mit einem einfachen Button tun.
 
 \subsubsection{SpecializationFragment.kt}
+
+Als wir anfangs den Aufbau unserer App geplant haben wurde festgelegt das jeder Schritt des Regelwerks als ein Fragment der Charaktererstellung umgesetzt wird. Als wir allerdings das \textit{CareerFragment} implementiert haben, wurden wir auf die enge Verzahnung der beiden Schritte aufmerksam. Aufgrund dieser Erkenntnisse entschieden wir, dieses Fragment komplett von dem Inhalt des \textit{CareerFragment}'s abhängig zu machen. Sobald sich die Daten in diesem ändern, wird das \textit{SpecializationFragment} zurückgesetzt. So kann gewährleistet werden das der Nutzer keine Eingaben tätigt welche sich gegenseitig widersprechen.
 
 \subsubsection{ExperienceFragment.kt}
 Nachdem der Spieler sich im vorherigen Fragment eine Spezialisierung seines Berufs ausgesucht hat, kann er hier Erfahrungspunkte einsetzen, um bestimmte Fähigkeiten zu erlernen. Dazu wird ihm der Talentbaum seiner Spezialisierung und die einsetzbaren Erfahrungspunkte angezeigt. Wie viele Erfahrungspunkte dem Spieler zum Erlernen neuer Fähigkeiten zur Verfügung stehen, hängt von der zuvor gewählten Spezies ab. Das bedeutet, das beim Öffnen des Fragments einige Voraussetzungen geprüft werden müssen. Sind diese Bedingungen nicht erfüllt, wird dem Nutzer ein Dialog angezeigt, in welchem er über die Änderungen im Fragment informiert wird.\\
@@ -137,6 +143,8 @@ Nachdem der Spieler sich im vorherigen Fragment eine Spezialisierung seines Beru
 Ein möglicher Auslöser für einen solchen Dialog ist das Wechseln der Spezies durch den Spieler. Wird dem Charakter eine neue Spezies zugewiesen, ändert sich dadurch die Menge an Erfahrungspunkten, die der Spieler im \textit{ExperienceFragment} ausgeben kann. Da der Spieler durch die Änderung der Spezies eventuell nicht mehr genügend Erfahrungspunkte hat, um zuvor erlernte Fähigkeiten weiterhin freischalten zu können, muss das Fragment bei einem Wechsel der Spezies zurückgesetzt werden. Ein Zurücksetzen des Fragments wird auch durch die Neuwahl des Berufs oder der Spezialisierung ausgelöst. Ein anderer Beruf sorgt dafür, dass dem Spieler andere Spezialisierungen zur Auswahl stehen. Durch eine neue Spezialisierung können mit den Erfahrungspunkten andere Fähigkeiten als zuvor freigeschaltet werden. Sollte der Nutzer das \textit{ExperienceFragment} aufrufen, ohne eine Spezies, einen Beruf oder eine Spezialisierung festgelegt zu haben, kann er das Fragment nicht nutzen, weil die fehlenden Informationen notwendig für das Verteilen der Erfahrungspunkte und Erlernen von Fähigkeiten benötigt werden. Wenn dieser Fall eintritt, wird ein Dialog geöffnet, der dem Nutzer alle Fragmente auflistet, welche er noch anschließen muss, bevor er das \textit{ExperienceFragment} bearbeiten kann.
 
 \subsubsection{AttributeFragment.kt}
+
+Das \textit{AttributeFragment} ist lediglich da um dem Spieler seine Attribute anzuzeigen. Dies ist nötig da sie teilweise aus den bereits eingetragenen Daten berechnet werden und der Nutzer sonst keine Möglichkeit diese abzufragen. Dieses Fragment ist aus einer anfänglichen Fehleinschätzung entstanden, da entgegen unserer annahmen der Spieler keinen direkten Einfluss auf die Attribute hat. Dieses Fragment besitzt ebenfalls eine Layoutdatei \textit{char\_creation\_attribute.xml} um das aussehen zu beschreiben.
 
 \subsubsection{MotivationFragment.kt}
 In diesem Schritt der Charaktererstellung wählt der Spieler die Motivation des Charakters aus. Es gibt insgesamt 30 Motivationen, die in drei Oberkategorien mit jeweils zehn Motivationen eingeteilt sind. Wie auch im \textit{ObligationFragment} hat der Spieler zwei Möglichkeiten zur Auswahl:
@@ -164,16 +172,32 @@ Viel Programmlogik hat dieses Fragment nicht zu bieten, denn es dient lediglich 
 
 \subsection{Würfeltool}
 Das Würfeltool stellt einen abgegrenzten Teil unserer Applikation dar. Es wird durch das Hauptmenü(\textit{MAIN\_NAVIGATION\_DRAWER}) aufgerufen. Wir haben uns auch hier für ein Fragment entschieden, da wir dieses gut in das bestehende System aus \textit{AppBarLayout} und \textit{NavigationView} einbinden konnten. Wir legten zunächst die Klasse \textit{DiceController} an. Diese erbt von Fragment und bildet damit die Hauptkomponente des Würfeltools. Da neben der Hauptansicht zusätzlich noch 2 Dialoge benötigt werden erstellten wir 3 Layout-Dateien(\textit{fragment\_dice.xml}, \textit{dice\_result\_display\_dialog.xml}, \textit{dice\_roll\_history.xml}). Um das Fragment strukturiert zu gestalten wurde der Inhalt durch CardViews in die drei Teile \grqq Verfügbare Würfel\grqq{}, \grqq Ausgewählte Würfel\grqq{} und \grqq Buttons\grqq{} aufgeteilt. Zum Beginn der Implementierung zeigte sich, dass aufgrund des Umfangs, eine weitere Klasse \textit{DiceHelper} angelegt werden muss. In dieser implementierten wir alle Methoden und Daten die für die Würfel benötigten wurden einschließlich aber nicht ausschließlich Wahrscheinlichkeiten, Würfelarten und Zufallsgenerierung. Hierbei stellt die innere Klasse \textit{DiceSide} eine Würfelseite da, sie hält für jedes Symbol einen Integer-Wert der die Anzahl beschreibt. Für jeden Würfel wurde dann ein Array angelegt welches die entsprechende Anzahl an Seiten in Form der oben genannten Klasse speichert. Insgesamt gibt es sieben verschiedene Würfel und 8 unterschiedliche Symbole. Zusätzlich gibt es eine Klasse \textit{Dice} welche diese Arrays verwendet um so mit einer Zufallsmethode eine Würfelseite zurückgeben zu können.\\
-Auch im DiceController wurden zusätzliche innere Klassen benötigt um den Würfelverlauf korrekt zu speichern und darzustellen. Die Einträge des Verlaufs werden durch \textit{RollHistoryEntry} mittels der Zeit und \textit{DiceSide} repräsentiert. Jedes Würfelsymbol erhält zum Aufruf des Fragmentes einen \textit{onClickListener} welcher sobald der Nutzer auf die jeweilige Grafik tippt, einen Würfel der entsprechenden Kategorie zum \grqq Pool\grqq{} hinzufügt. Die maximale Anzahl pro Typ wird dabei in der Variable \textit{diceMaxCount} festgehalten und beträgt 6, da das Regelwerk nicht mehr erlaubt. Wenn ein Würfel zum Pool hinzugefügt wird so wird in dem Array \textit{diceCount} der entsprechende Wert um 1 erhöht. Im Array befinde sich für jeden Würfeltyp ein Integer welches die Anzahl der momentan zum Pool hinzugefügten speichert. So kann dynamisch ein Element entfernt und hinzugefügt werden. Sollte der Benutzer sich entscheiden zu Würfel wird entsprechend oft die random-Method der Dice Klasse aufgerufen. Da diese ein DiceSide-Object zurückliefert, kann man alle Ergebnisse addieren und so das Gesamtergebnis in einem DiceSide-Object speichern. Abschließend werden noch Symbole, welche sich gegenseitig aufheben, gegeneinander gerechnet und alles mit dem aktuellen TimeStamp in die \textit{RollHistory}-ArrayList gespeichert. In dieser werden immer die letzten 5 Ergebnisse gespeichert. Um den Würfelverlauf dauerhaft speichern zu können verwendeten wir \textit{SharedPreferences} und die JSON-Bibliothek Google Gson \cite{gson}. Zunächst wurde das ArrayList-Object in eine JSON-repräsentation umgewandelt und diese dann als String in die Preferences Datei eingetragen. Zum laden des Objektes wird dieser Prozess umgekehrt. Abschließend sei zu sagen das die größte Herausforderung bei der Implementierung das entwickeln einer passenden Datenrepräsentation der Würfel war. Die Wahrscheinlichkeiten uns Symboltabellen entnahmen wir dem \textit{Under a black Sun}-Storybook \cite{adventurebook}.
+Auch im DiceController wurden zusätzliche innere Klassen benötigt um den Würfelverlauf korrekt zu speichern und darzustellen. Die Einträge des Verlaufs werden durch \textit{RollHistoryEntry} mittels der Zeit und \textit{DiceSide} repräsentiert. Jedes Würfelsymbol erhält zum Aufruf des Fragmentes einen \textit{onClickListener} welcher sobald der Nutzer auf die jeweilige Grafik tippt, einen Würfel der entsprechenden Kategorie zum \grqq Pool\grqq{} hinzufügt. Die maximale Anzahl pro Typ wird dabei in der Variable \textit{diceMaxCount} festgehalten und beträgt 6, da das Regelwerk nicht mehr erlaubt. Wenn ein Würfel zum Pool hinzugefügt wird so wird in dem Array \textit{diceCount} der entsprechende Wert um 1 erhöht. Im Array befinde sich für jeden Würfeltyp ein Integer welches die Anzahl der momentan zum Pool hinzugefügten speichert. So kann dynamisch ein Element entfernt und hinzugefügt werden. Sollte der Benutzer sich entscheiden zu Würfel wird entsprechend oft die random-Method der Dice Klasse aufgerufen. Da diese ein DiceSide-Object zurückliefert, kann man alle Ergebnisse addieren und so das Gesamtergebnis in einem DiceSide-Object speichern. Abschließend werden noch Symbole, welche sich gegenseitig aufheben, gegeneinander gerechnet und alles mit dem aktuellen Zeitstempel in die \textit{RollHistory}-ArrayList gespeichert. In dieser werden immer die letzten 5 Ergebnisse gespeichert. Um den Würfelverlauf dauerhaft speichern zu können verwendeten wir \textit{SharedPreferences} und die JSON-Bibliothek Google Gson \cite{gson}. Zunächst wurde das ArrayList-Object in eine JSON-repräsentation umgewandelt und diese dann als String in die Preferences Datei eingetragen. Zum laden des Objektes wird dieser Prozess umgekehrt. Abschließend sei zu sagen das die größte Herausforderung bei der Implementierung das entwickeln einer passenden Datenrepräsentation der Würfel war. Die Wahrscheinlichkeiten uns Symboltabellen entnahmen wir dem \textit{Under a black Sun}-Storybook \cite{adventurebook}.
 
 \subsection{Import/Export}
 
-Die Funktion den Charakter zu importieren und auch zu exportieren war uns sehr wichtig, da die Charaktere auch auf anderen Geräten geöffnet zur Verfügung stehen sollten.
+Die Möglichkeit den Charakter zu importieren und auch zu exportieren war uns sehr wichtig, da die Charaktere auch auf anderen Geräten zur Verfügung stehen sollten. Da wir für das speichern in dem Projektrahmen keine eigene Infrastruktur zur Verfügung stellen konnten, haben wir uns über alternativen informiert. Schließlich ist die Wahl dann auf \hyperref[sdt:firebase]{Google Firebase} gefallen, da hier eine bereits bestehende Java Bibliothek angeboten wurde und der Dienst in vielen Android-Applikationen Anwendung findet. Um den Firebase nutzen zu können muss zunächst auf der entsprechenden Website ein neues Projekt angelegt werden. Um ein solches zu erstellen braucht man als Entwickler lediglich den Paketnamen und kann sich dann eine Konfigurationsdatei herunterladen. Anschließend werden die Abhängigkeiten in die \textit{build.gradle} Dateien eingetragen. Nun ist die Einrichtung abgeschlossen und im Quellcode kann auf die \textit{Firebase API} zugegriffen werden. Der Nutzer kann sich, sofern noch nicht geschehen, einloggen und dann seinen Charakter herunter- bzw. hochladen. Außerdem bekommt er eine Liste mit den gespeicherten Charakteren angezeigt. Das aussehen dieses Fenster wurde in der \textit{fragment\_import\_export.xml} festgelegt. Diese wird über den Standard \textit{LayoutInflater} eingelesen und dann als Fragment dargestellt. Abschließend sei zu dieser Funktion zu sagen, dass die Implementierung deutlich einfacherer war als ursprünglich angenommen. Durch die gute Unterstützung von \grqq Google Firebase\grqq{} konnten wir das geplante dann schnell umsetzen.
 
 \section{Test und Usability}
+\subsection{Test}
+\subsection{Usability}
 
 \section{Zusammenfassung}
+In diesem Kapitel fassen wir zunächst einzeln unsere Erfahrungen zusammen, abschließend wird dann das Entwicklungspotenzial der Applikation bzw. Idee näher betrachtet.
 \subsection{Fazit}
 \subsubsection{Christopher Kluck}
+I bims der Christopher und hier steht meine Meinung.
 \subsubsection{Philipp Clausing}
+Durch die Entwicklung der Applikation konnte ich sehr viel über Android erfahren. Ich habe mitbekommen wie aufwendig die Planungsphase, auch bei vermeintlich trivialen Funktionalitäten, sein kann. Eine Besonderheit bei der Erstellung von Mobilen Applikationen ist der Fokus auf die Benutzeroberfläche, so musste viel Zeit bei der Erstellung dieser aufgewendet werden. Eine weitere Hürde für mich war die \grqq Beständigkeit\grqq{} von Daten bzw. der Lebenszyklus von Activity's , Fragmenten, da dies im Kontrast steht mit der traditionellen Desktopentwicklung. Unsere Teamarbeit kann ich nur positiv bewerten, wir haben zu keinem Zeitpunkt große Unstimmigkeiten in unserer Vision der Applikation gehabt und konnten dem jeweils anderen immer mit Rat und konstruktiver Kritik zur Seite stehen. Schließlich ziehe ich eine positive Bilanz und kann mit neuem Wissen zukünftige Aufgaben angehen.
+
 \subsection{Entwicklungspotenzial}
+Unter Entwicklungspotenzial möchten wir die Punkte näher beleuchten welche im Rahmen des Projektes vernachlässigt wurden, da Sie den angesetzten zeitlichen Rahmen gesprengt hätten.\\
+\begin{itemize}
+	\item \textbf{Gruppenfunktionen}\\
+	Da man bei einem Pen und Paper Rollenspiel immer in einer Gruppe agiert, wäre eine Funktion zum synchronisieren von Spielen oder das zusammenfassen zu einer Gruppe ein passendes Feature. Auch das gemeinsame Planen von Terminen ist hier denkbar.
+	\item \textbf{Weitere Regelwerke}\\
+	Die Möglichkeit andere Regelwerke zu unterstützen haben wir seit beginn angedacht. Allerdings aufgrund der unterschiedlichen Komplexität und dem Mehraufwand bei der Architekturplanung nicht umgesetzt. Sollte man die Applikation unabhängig weiter entwickeln, wäre dies ein geplantes Feature.
+	\item \textbf{Zusätzliche Plattformen}\\
+	Die von uns entwickelte App würde auch auf anderen Gerätetypen Anwendung finden. Denkbar wären hier iOS, Windows und Linux sowie ChromeOS.
+\end{itemize}
+
